--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,15 @@
     <string name="inbox">Inbox</string>
     <string name="settings">Settings</string>
 
+    <string name="slide_1_title">Email Superpowers</string>
+    <string name="slide_1_desc">Fly through your inbox using cutting-edge email tools.</string>
+
+    <string name="slide_2_title">Smart Inbox</string>
+    <string name="slide_2_desc">See what\'s important and clean your inbox in seconds.</string>
+
+    <string name="slide_3_title">Email for Teams</string>
+    <string name="slide_3_desc">Share, create and discuss emails with your team.</string>
+
     <!--Menu Left-->
 
     <string name="sign_in_with_google">Sign in with Google</string>
@@ -23,4 +32,25 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="account">Maria0348@gmail.com</string>
+    <string name="email_accounts">Email Accounts</string>
+    <string name="teams">Teams</string>
+    <string name="personalization">Personalization</string>
+    <string name="appearance">Appearance</string>
+    <string name="email_viewer">Email Viewer</string>
+    <string name="smart_inbox">Smart Inbox</string>
+    <string name="swiper">Swiper</string>
+    <string name="shortcuts">Shortcuts</string>
+    <string name="general">General</string>
+    <string name="signatures">signatures</string>
+    <string name="templates">Templates</string>
+    <string name="scheduling">Scheduling</string>
+    <string name="notifications">Notifications</string>
+    <string name="other">Other</string>
+    <string name="sound_preferences">Sound Preferences</string>
+    <string name="security">Security</string>
+    <string name="experimental_features">Experimental Features</string>
+    <string name="readdle">Readdle</string>
+    <string name="whats_new">What\'s New?</string>
+    <string name="terms">Terms</string>
 </resources>
